App: Almost get JavaFX webviews working. Still needs work though.